--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="about-right col-md-6">
             <div>
                 <h1>Just About Me</h1>
-                <p>高俊峰，男，一个90后的宅男，15年入行，从业1年多。从一个刚踏出校门一无所知的逗逼，变成一个渐渐沉默寡言的攻城狮。偶尔会和朋友出去旅游，放风放松心情。</p>
+                <p>高俊峰，男，一个90后的宅男，15年入行，从业2年。从一个刚踏出校门一无所知的逗逼，变成一个渐渐沉默寡言的攻城狮。偶尔会和朋友出去旅游，放风放松心情。</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
@@ -226,14 +226,14 @@
                     </li>
                     <li class="col-md-7 col-sm-12 col-xs-12 ">
                         <div class="t-panel">
-                            <div><h4>2015年9月</h4><i></i></div>
-                            <div><p>就职于山西点付生活（太原）科技有限公司，<br>担任前段工程师，主要负责主站布局以及优化，以及项目pc端的前段页面等工作.</p></div>
+                            <div><h4>2015年5月</h4><i></i></div>
+                            <div><p>在公司转正并担任前段工程师,<br>主要负责主站布局优化以及项目pc端的前段页面等工作.</p></div>
                         </div>
                     </li>
                     <li class="col-md-7 col-sm-12 col-xs-12 left">
                         <div class="t-panel">
-                            <div><h4>2016年5</h4><i></i></div>
-                            <div><p>参与公司培训计划（为期一个月），<br>强化对Node以及Php等前段知识的认知，培养员工的全栈开发意识</p></div>
+                            <div><h4>2015年8</h4><i></i></div>
+                            <div><p>参与公司培训计划（为期两个月）<br>强化对前段知识的认知并培养员工的全栈开发意识</p></div>
                         </div>
                     </li>
                     <li class="col-md-7 col-sm-12 col-xs-12">
@@ -242,9 +242,9 @@
                             <div>
                                 <p>在职期间，做过项目：</p>
                                 <p> 【车网互联】PC端项目；</p>
-                                <p> 【oneNet】PC端项目；</p>
-                                <p> 【neta】移动端项目；</p>
-                                <p> 【热推】移动端项目；</p>
+                                <p> 【亿富鼎】PC端项目；</p>
+                                <p> 【农大阅读APP】移动端项目；</p>
+                                <p>等等</p>
                             </div>
                         </div>
                     </li>
