--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                     </li>
                     <li class="col-md-7 col-sm-12 col-xs-12 left">
                         <div class="t-panel">
-                            <div><h4>2015年8</h4><i></i></div>
+                            <div><h4>2015年8月</h4><i></i></div>
                             <div><p>参与公司培训计划（为期两个月）<br>强化对前段知识的认知并培养员工的全栈开发意识</p></div>
                         </div>
                     </li>
